--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -27,7 +27,7 @@
 <body>
     <main>
         <h1>Teste de imagem e fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae voluptas unde totam, culpa ducimus animi facere ut consequatur officia amet quae obcaecati facilis repellat explicabo qui, numquam eos eius mollitia.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae voluptas unde totam, culpa ducimus animi facere ut consequatur officia amet quae obcaecati facilis repellat explicabo qui, numquam eos eius mollitia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos ullam maiores tenetur dolorum! Hic aliquid adipisci, laborum id quos voluptatem. Et rem error iusto accusamus maiores laboriosam officiis repudiandae numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius tempore hic beatae quidem soluta dolor exercitationem dolorum, veniam sint placeat enim veritatis nulla, minima suscipit sapiente possimus reiciendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim voluptas molestias expedita hic dignissimos libero. Impedit ipsum eius consectetur cumque labore, veritatis deleniti doloribus odit perspiciatis itaque, cum sequi.</p>
     </main>
 </body>
 </html>
