Atualização no estilo do arquivo fundo006

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+                color > image > position > repeat > [size]> attachment
+            */
+            
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +35,15 @@
 <body>
     <main>
         <h1>Teste de imagem e fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae voluptas unde totam, culpa ducimus animi facere ut consequatur officia amet quae obcaecati facilis repellat explicabo qui, numquam eos eius mollitia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos ullam maiores tenetur dolorum! Hic aliquid adipisci, laborum id quos voluptatem. Et rem error iusto accusamus maiores laboriosam officiis repudiandae numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius tempore hic beatae quidem soluta dolor exercitationem dolorum, veniam sint placeat enim veritatis nulla, minima suscipit sapiente possimus reiciendis omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque enim voluptas molestias expedita hic dignissimos libero. Impedit ipsum eius consectetur cumque labore, veritatis deleniti doloribus odit perspiciatis itaque, cum sequi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque cum ipsa autem esse, officia odit, ipsam, nobis similique facere a inventore sit consectetur accusantium molestiae magni minima recusandae exercitationem.</p>
     </main>
 </body>
 </html>
